--- a/Registro.html
+++ b/Registro.html
@@ -39,9 +39,9 @@
     </header>
     <div class="login-container">
         <div class="login-box">
-            <!-- <a href="index.php" class="icon-link">
-                <img src="./Imagenes/atras.png" alt="Salir" class="icon-image">
-            </a> -->
+            <div href="index.php" class="icon-link">
+                <img src="./imagenes/LogoGesimas.png" alt="Salir">
+            </div>
             <h3>Registro</h3>
             <p>Bienvenido, por favor llene los siguientes campos:</p>
             <form action="Registro.php" method="POST">
